# ldap-just

./: .npmignore  Cargo.toml  LICENSE  compose.yaml  index.d.ts  index.js  package-lock.json  package.json
.github/workflows/: CI.yml  build_and_test.yml
__test__/: index.spec.mjs  ldap.spec.mjs
ldifs/: customize.ldif  gen_cert.sh  ldap.crt  ldap.csr  ldap.key  ldap.v3.ext  ldap_root_ca.crt  ldap_root_ca.key
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
