[package]
edition = "2021"
name = "ldap-just"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.22.1"
ldap3 = "0.11.5"
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.11", default-features = false, features = [
  "napi4",
  "async",
] }
napi-derive = "2.16.12"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.131"

[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true
strip = "symbols"
